# local-meeting-notes

./: .gitignore  404.html  LICENSE  README.md  app_entry.py  build_dmg.sh  index.html  mkdocs.yml  pyproject.toml  setup.sh  setup_app.py  sitemap.xml
.github/workflows/: codeql.yml  docs.yml
architecture/: index.html
audio-capture-roadmap/: index.html
audio-routing/: index.html
docs/: architecture.md  audio-capture-roadmap.md  audio-routing.md  index.md  installation.md  privacy.md  troubleshooting.md  usage.md
installation/: index.html
meeting_capture/: __init__.py  __main__.py  call_detection.py  cli.py  dependencies.py  menubar.py  recorder.py  summarizer.py  transcriber.py
privacy/: index.html
search/: search_index.json
tests/: test_call_detection.py  test_cli_imports.py  test_dependencies.py  test_menubar_lazy_import.py  test_recorder_device_selection.py  test_setup_dependencies.py  test_transcriber_dependencies.py
troubleshooting/: index.html
usage/: index.html
