[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-capture"
version = "0.1.0"
description = "Local meeting recorder + Whisper transcription + Ollama summarization for Apple Silicon."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Steve" }]
license = { text = "MIT" }
keywords = ["meeting", "whisper", "ollama", "transcription", "mlx", "apple-silicon"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "requests>=2.31",
    "click>=8.1",
]

[project.scripts]
meet = "meeting_capture.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["meeting_capture"]
